Inicio de sesión con Firebase

--- a/agenda/src/app/app.html
+++ b/agenda/src/app/app.html
@@ -11,6 +11,12 @@
         {{p.title}}
       </button>
     </ion-list>
+
+    <ion-list>
+      <button logout ion-item  (click)="cerrarSesion()">
+        Cerrar Sesión
+      </button>
+    </ion-list>
   </ion-content>
 
 </ion-menu>
