--- a/Cibo/src/app/app.html
+++ b/Cibo/src/app/app.html
@@ -1,5 +1,6 @@
-<!--<ion-nav [root]="rootPage"></ion-nav>-->
+<ion-nav [root]="rootPage"></ion-nav>
 
+<!--
 <ion-menu [content]="content">
     <ion-header>
       <ion-toolbar>
@@ -21,7 +22,7 @@
       </ion-list>
     </ion-content>
   
-  </ion-menu>
+  </ion-menu>-->
   
   <!-- Disable swipe-to-go-back because it's poor UX to combine STGB with side menus -->
-  <ion-nav [root]="rootPage" #content swipeBackEnabled="false"></ion-nav>
+ <!-- <ion-nav [root]="rootPage" #content swipeBackEnabled="false"></ion-nav> -->
