Estilos de home

--- a/Cibo2/src/pages/login/login.scss
+++ b/Cibo2/src/pages/login/login.scss
@@ -4,10 +4,10 @@
     background-size: 100% 100%;
 }
 
-.center{
+.center-login{
     padding-top: 60%;
 }
 
-.transparent{
+.transparent-login{
     background-color: transparentize($color: #FFFFFF, $amount: 0.2 );
 }
