--- a/Cibo2/src/pages/home/home.scss
+++ b/Cibo2/src/pages/home/home.scss
@@ -1,5 +1,25 @@
-.position-dislikeandlike{
-    padding-top: 30%;
+.position-dislikeandlike-img-home{
+    padding-top: 5%;
     margin-left: 5%;
-   
 }
+
+.position-dislikeandlike-button-home{
+    padding: 70px 1px;
+    border-radius: 10px;
+    
+}
+
+.position-card-home{
+    margin-left: auto;
+    margin-right: auto;
+    width: 100%;
+    height: 55%;
+}
+
+.position-image-home{
+    width: 100%;
+    height: 100%;
+}
+
+
+
