--- a/Cibo2/src/pages/home/home.scss
+++ b/Cibo2/src/pages/home/home.scss
@@ -1,11 +1,13 @@
 .position-dislikeandlike-img-home{
     margin-top: auto;
     margin-left: auto;
+    border-radius: 30px;
+    color: black;
 }
 
 .position-dislikeandlike-button-home{
     padding: 60px 1px;
-    border-radius: 20px;
+    border-radius: 30px;
     color: black;
     box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
 }
